# crm

./: .env.example  .env.prod.example  .gitignore  README.md  SETUP.md  deploy.sh  docker-compose.dev.yml  docker-compose.host-nginx.yml  docker-compose.prod.yml  docker-compose.yml  start.sh
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_company_id_nullable.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/api/: router.py
backend/app/api/v1/: access_expiration.py  auth.py  companies.py  entities.py  entity_records.py  roles.py  telegram.py  users.py
backend/app/core/: dependencies.py  exceptions.py  pagination.py  security.py
backend/app/models/: __init__.py  access_expiration.py  base.py  company.py  entity.py  entity_record.py  role.py  telegram.py  user.py
backend/app/repositories/: access_expiration.py  base.py  company.py  entity.py  entity_record.py  role.py  telegram.py  user.py
backend/app/schemas/: access_expiration.py  auth.py  common.py  company.py  entity.py  entity_record.py  role.py  telegram.py  user.py
backend/app/services/: access_expiration.py  auth.py  entity.py  entity_record.py  role.py  telegram.py  user.py
backend/app/tasks/: expiration_checker.py  scheduler.py
bot/: Dockerfile  requirements.txt
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
nginx/: nginx.init.conf  nginx.prod.conf
(+59 files in other folders)
